# icfpc2017

./: .gitignore  README.md  TASKS.md  bfs_punter.py  game.py  index.html  interface.py  logger.py  play.sh  rand_punter.py  release.sh  score.py  server.py  tournament.py  util.py
hs-client/: README.md  hs-client.cabal
hs-client/app/: Arena.hs  Main.hs
hs-client/src/: AI.hs  Breed.hs  Lib.hs  Online.hs
icfp-924bdb4c-8d8d-4705-a32d-75c42e574c29/: PACKAGES  README  install  interface.py  networkx-1.11-py2.7.egg  punter
icfp-924bdb4c-8d8d-4705-a32d-75c42e574c29/src/: interface.py  punter
maps/: README.md
ml-client/: .merlin  jbuild  online.atd  online.ml  online.mli  punter.ml  punter.mli
output/: game.two_boston.json  game.two_random.json
py-client/: bfs.sh  bfs_hunter.py  bfs_punter.py  dfs.sh  dfs_punter.py  greedy_punter.py  helpers.py  hybrid.sh  hybrid_punter.py  interface.py  launcher.py  logger.py  lst_punter.py  mcts_punter.py  mst_punter.py  rand.sh  rand_punter.py  unionfind.py
scripts/: runviewer.sh
viewer/: index.html  index2.html  style.css  viewer.js
