name:                hs-client
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hs-client#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, AI, Online, Breed
  build-depends:       base >= 4.7 && < 5, aeson, containers, fgl,
                       bytestring, network, random
  default-language:    Haskell2010

executable hs-client-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, hs-client
  default-language:    Haskell2010

executable hs-arena-exe
  hs-source-dirs:      app
  main-is:             Arena.hs
  build-depends:       async, base, containers, hs-client
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hs-client
